# othello

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  components.py  create_stage_archives.py  manual.docx  manual.md  pyproject.toml  requirements.txt
images/diagrams/: algorithm_flowcharts.drawio
src/othello/: ai.py  components.py  flask_game_engine.py  game_engine.py
templates/: index.html
tests/: test_ai.py  test_components.py  test_flask_game_engine.py  test_game_engine.py  testing_utils.py
