[project]
name = "Othello"
version = "0.0.0"
description = "Coursework 2 for ECM1400."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[tool.ruff]
line-length = 110
lint.select = ["E", "F", "D"]
lint.ignore = ["D100"]
lint.per-file-ignores = { "tests/*" = ["D"], "__init__.py" = ["D"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
