[project]
name = "Othello"
version = "0.0.0"
description = "Coursework 2 for ECM1400."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
]

[tool.ruff]
line-length = 110
lint.select = ["E", "F", "D", "W"]
lint.ignore = ["D100"]
lint.per-file-ignores = { "tests/*" = ["D"], "__init__.py" = ["D"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
